teams/blue/dev/demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devfinder-web-deployment
  namespace: team-blue-dev
  labels:
    app.kubernetes.io/created-by: eks-workshop
    app.kubernetes.io/type: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: dev-finder
      app.kubernetes.io/instance: dev-finder
      app.kubernetes.io/component: service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dev-finder
        app.kubernetes.io/instance: dev-finder
        app.kubernetes.io/component: service
        app.kubernetes.io/created-by: eks-workshop
    spec:
      containers:
      - name: devfinder-web-container
        image: roxsross12/workshop-roxs-eks-blueprints-demo:1c7a52ff
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: devfinder-web-service
  namespace: team-blue-dev
  labels:
    app.kubernetes.io/name: dev-finder
    app.kubernetes.io/instance: dev-finder
    app.kubernetes.io/component: service
    app.kubernetes.io/created-by: eks-workshop  
spec:
  selector:
    app.kubernetes.io/name: dev-finder
    app.kubernetes.io/instance: dev-finder
    app.kubernetes.io/component: service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
